resources/base/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
spec:
  ports:
  - port: 3080
    name: http
    protocol: TCP
    targetPort: 3080
  selector:
    app: adguard
  type: ClusterIP
